--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "eslint . --fix --ext .json,.d.ts,.ts,.vue src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "element-plus": "^2.8.8",
     "vue": "^3.5.12"
   },
