--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "element-plus": "^2.8.8",
+    "sortable": "^2.0.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
